--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./app/app.component.scss";
+@import "./app/components/navbar/navbar.component.scss";
+@import "./app/components/product-list/product-list.component.scss";
+@import "./app/components/product-form/product-form.component.scss";
